# ex2_98

./: CMakeLists.txt  MyImplementation.cpp  MyImplementation.h  date.cpp  example.h  interface.h  left to do  main.cpp
MyClasses/: Elements.h
MyClasses/Date strucre/: DataTables.cpp  DataTables.h
MyClasses/Elements/: MyCustomer.cpp  MyCustomer.h  MyEmployee.cpp  MyEmployee.h  MyFlight.cpp  MyFlight.h  MyID.cpp  MyID.h  MyPlane.cpp  MyPlane.h  MyReservation.cpp  MyReservation.h
